Fix jumping star on dashboard and even weights on icons

--- a/app/assets/stylesheets/arbor_reloaded/_icons.scss
+++ b/app/assets/stylesheets/arbor_reloaded/_icons.scss
@@ -28,15 +28,15 @@
   vertical-align: middle;
 }
 
+.icn-favorite-empty:before { content: '\e904'; }
+.icn-favorite:before { content: '\e906'; }
+.icn-delete:before { content: '\e907'; }
+.icn-copy:before { content: '\e908'; }
 .icn-archive:before { content: '\e900'; }
 .icn-arrow-dropdown:before { content: '\e901'; }
 .icn-arrow:before { content: '\e902'; }
 .icn-comments:before { content: '\e903'; }
-.icn-copy:before { content: '\e904'; }
 .icn-cross:before { content: '\e905'; }
-.icn-delete:before { content: '\e906'; }
-.icn-favorite-empty:before { content: '\e907'; }
-.icn-favorite:before { content: '\e908'; }
 .icn-notifications:before { content: '\e909'; }
 .icn-search:before { content: '\e90a'; }
 .icn-settings:before { content: '\e90b'; }
